fix height overflow

--- a/munchoGram/src/routes/Layout/Layout.css
+++ b/munchoGram/src/routes/Layout/Layout.css
@@ -7,6 +7,7 @@
 }
 .outlet {
     height: 100%;
+    overflow-y:auto ;
     background-color: hsl(211.86,10%,90%);
     display: flex;
     flex-direction: column;
